# SPULibC

./: CMakeLists.txt  Info.plist  README.md  spulibc.entitlements
examples/: dynamic_alert_dismiss.m
include/: dyld.h  dyld.m  dyld_patch_platform.m  dyld_validation_check.m  spulibc.h  utils.h
src/: dyld_bypass.m  spulibc.c
